Initial plugin test structure